src/index.css
/* ... */
#intro #scrollea svg path.st1 {
  fill: white;
  animation: scroll 0.8s infinite;
}

#intro #scrollea svg .st0 {
  fill: white;
}

#intro #video {
  display: flex;
  justify-content: center;
  align-self: center;
  width: 100vw;
  height: 100vh;
}

#intro #video #video-camara {
  position: relative;
  width: 100vw;
  height: 100vh;
  background-image: url("assets/camara-frames/introframes\(1\).webp");
  background-position: center;
  background-size: cover;
}

#intro #video #video-camara img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* opacity: 0; */
  /* display: none; */
}

#intro #video #texto {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-self: center;
  height: 100%;
  width: 100%;
}

#intro #video #texto p {
  font-size: 5rem;
  margin-right: 0;
  text-align: center;
  color: transparent;
  -webkit-text-stroke: 2px rgb(203, 219, 67);
  font-family: "Montserraty", sans-serif;
}

#intro #video #texto .spanIntroCtn {
  display: flex;
}

#intro #video #texto .spanIntroCtn p {
  font-size: 5rem;
  margin-right: 1rem;
  text-align: center;
  color: transparent;
  -webkit-text-stroke: 2px rgb(203, 219, 67);
  font-family: "Montserraty", sans-serif;
}

#intro #video #texto .spanIntroCtn span {
  font-size: 5rem;
  margin: 0;
  text-align: center;
  color: transparent;
  -webkit-text-stroke: 2px rgb(203, 219, 67);
  font-family: "Montserraty", sans-serif;
}

/* ============== END INTRO ============= */

/* ============== PORTFOLIO ============= */

section.portfolio {
  position: fixed;
  width: 100vw;
  background-color: hsl(0, 0%, 0%);
  opacity: 0;
  z-index: 2;
}

section.portfolio .bg-rodaje,
section.portfolio .sup-rodaje {
  position: absolute;
  width: 100%;
  height: auto;
  object-fit: cover;
  object-position: bottom;
}

section.portfolio .sup-rodaje {
  z-index: 2;
}

section.portfolio .sup-rodaje.zoomed {
  z-index: 4;
  opacity: 0;
}

section.portfolio h2,
section.portfolio span {
  font-family: "Montserraty", sans-serif;
}

section.portfolio p,
section.portfolio bold {
  font-family: "Montserrat", sans-serif;
}

section.portfolio h2,
section.portfolio bold,
section.portfolio span {
  text-transform: uppercase;
}

section.portfolio h2 {
  position: relative;
  width: fit-content;
  height: auto;
  font-weight: 1000;
  font-size: 3.8rem;
  line-height: 4.2rem;
  color: transparent;
  -webkit-text-stroke: 2px rgb(203, 219, 67);
}

section.portfolio .pf-accordion h2 {
  cursor: url("assets/cursor-mano.svg") 12 12, pointer;
}

section.portfolio p,
section.portfolio bold {
  font-size: 18px;
  white-space: nowrap;
  color: #fff;
}

section.portfolio p {
  font-weight: 400;
}

section.portfolio bold {
  font-weight: 700;
}

section.portfolio .txt-ctn-1,
section.portfolio .txt-ctn-2 {
  position: absolute;
  bottom: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding-top: 80px;
}

section.portfolio .txt-ctn-2 {
  z-index: 20;
}

section.portfolio .txt-row {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

section.portfolio .dup-ctn {
  display: flex;
  justify-content: center;
  position: relative;
  text-align: center;
  z-index: 3;
}

section.portfolio .dup-ctn .spaced-txt {
  display: flex;
}

section.portfolio .txt-row h2 {
  position: relative;
  text-align: center;
  z-index: 0;
  opacity: 0;
}

section.portfolio .pf-accordion-outer {
  position: relative;
  display: flex;
  align-items: center;
  width: 100vw;
  height: 100vh;
  overflow: visible;
  opacity: 0;
  z-index: 0;
}

section.portfolio ol {
  width: 50%;
  position: relative;
  padding-left: 25px;
  z-index: 20;
}

section.portfolio ol fieldset {
  border: none;
}

section.portfolio ol li {
  padding-top: 50px;
}

section.portfolio ol li h2 {
  z-index: 20;
  transform: translateY(30px);
  opacity: 0;
}

section.portfolio .desc-ctn {
  width: 100%;
  display: flex;
  opacity: 0;
  transform: translateY(-100px);
  margin: 0;
}

section.portfolio ol li hr.ctn-line {
  margin: -12px 0;
  height: 3px;
  background-color: #fff;
}

section.portfolio .desc-ctn hr.desc-line {
  margin: 0 5px;
}

section.portfolio .bg-overlay {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  background-color: #000;
  opacity: 0;
  z-index: 5;
}

section.portfolio .dup-ctn span {
  display: inline-block;
  position: relative;
  font-weight: 1000;
  font-size: 3.8rem;
  color: transparent;
  z-index: 0 !important;
  opacity: 0;
  -webkit-text-stroke: 2px rgb(203, 219, 67);
}

section.portfolio .dup-ctn span.spacer {
  font-size: 3rem;
  visibility: hidden;
}

section.portfolio div.video-ctn {
  width: 50%;
  height: 100%;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 5;
}

section.portfolio .box-ctn {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  height: 28%;
  background-color: transparent;
  transform: skew(3.5deg, 7deg) translate(-5px, 40px);
}

section.portfolio .vid-overlay {
  position: absolute;
  width: 101%;
  height: 101%;
  top: -1px;
  left: -1px;
  background-color: transparent;
  z-index: 6;
  opacity: 1;
}

section.portfolio .box-ctn .preview-video {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0;
  pointer-events: none;
}

section.portfolio .logo-box {
  position: relative;
  width: 100px;
  height: 100px;
  fill: rgb(203, 219, 67);
  opacity: 0.4;
  z-index: 7;
}

.modal-container {
  position: absolute;
  top: 0;
  left: auto;
}

.modal {
  position: fixed;
  z-index: 1000;
  width: 100vw;
  height: 100vh;
  background-color: #000;
}

.modal-content {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}
/* ... */

